src/parser/expr.rs
//! Expression parsing.
//!
//! Operator precedence is encoded with one recursive function per
//! level. The level order from lowest to highest matches the spec.

use crate::ast::{
    BinaryOp, Block, ElseBranch, Expr, ExprKind, FieldInit, LambdaBody, LambdaParam, MacroCall,
    MacroDelim, MatchArm, StrFragment, Type, UnaryOp,
};
use crate::error::{ParseError, RavenError};
use crate::lexer::{Lexer, Token, TokenKind, ESCAPED_DOLLAR_SENTINEL};
use crate::span::Span;

use super::{merge_spans, ParseResult, Parser};

impl Parser {
    /// Parse a full expression at the lowest precedence.
    pub(crate) fn parse_expr(&mut self) -> ParseResult<Expr> {
        self.parse_logical_or()
    }

    /// Parse an expression with struct literals temporarily disabled.
    /// Used for the condition / scrutinee of `if`, `while`, `for`, and
    /// `match` so a trailing `{` is the body, not a struct literal.
    pub(crate) fn parse_expr_no_struct(&mut self) -> ParseResult<Expr> {
        let saved = self.no_struct_literal;
        self.no_struct_literal = true;
        let r = self.parse_expr();
        self.no_struct_literal = saved;
        r
    }

    // ----- precedence ladder -----

    fn parse_logical_or(&mut self) -> ParseResult<Expr> {
        let mut lhs = self.parse_logical_and()?;
        loop {
            self.skip_newlines_at_continuation();
            if matches!(self.peek_kind(), TokenKind::OrOr) {
                self.advance();
                self.skip_newlines();
                let rhs = self.parse_logical_and()?;
                let span = merge_spans(&lhs.span, &rhs.span);
                lhs = Expr {
                    kind: ExprKind::Binary {
                        op: BinaryOp::Or,
                        lhs: Box::new(lhs),
                        rhs: Box::new(rhs),
                    },
                    span,
                };
            } else {
                break;
            }
        }
        Ok(lhs)
    }

    fn parse_logical_and(&mut self) -> ParseResult<Expr> {
        let mut lhs = self.parse_comparison()?;
        loop {
            self.skip_newlines_at_continuation();
            if matches!(self.peek_kind(), TokenKind::AndAnd) {
                self.advance();
                self.skip_newlines();
                let rhs = self.parse_comparison()?;
                let span = merge_spans(&lhs.span, &rhs.span);
                lhs = Expr {
                    kind: ExprKind::Binary {
                        op: BinaryOp::And,
                        lhs: Box::new(lhs),
                        rhs: Box::new(rhs),
                    },
                    span,
                };
            } else {
                break;
            }
        }
        Ok(lhs)
    }

    fn parse_comparison(&mut self) -> ParseResult<Expr> {
        let lhs = self.parse_bit_or()?;
        self.skip_newlines_at_continuation();
        let op = match self.peek_kind() {
            TokenKind::EqEq => Some(BinaryOp::Eq),
            TokenKind::NotEq => Some(BinaryOp::Ne),
            TokenKind::Lt => Some(BinaryOp::Lt),
            TokenKind::Gt => Some(BinaryOp::Gt),
            TokenKind::LtEq => Some(BinaryOp::Le),
            TokenKind::GtEq => Some(BinaryOp::Ge),
            _ => None,
        };
        let Some(op) = op else { return Ok(lhs) };
        self.advance();
        self.skip_newlines();
        let rhs = self.parse_bit_or()?;
        // Chain rejection: another comparison directly after rhs is a
        // parse error per the spec.
        self.skip_newlines_at_continuation();
        if matches!(
            self.peek_kind(),
            TokenKind::EqEq
                | TokenKind::NotEq
                | TokenKind::Lt
                | TokenKind::Gt
                | TokenKind::LtEq
                | TokenKind::GtEq
        ) {
            return Err(RavenError::parse(
                ParseError::ChainedComparison,
                self.peek().span.clone(),
            ));
        }
        let span = merge_spans(&lhs.span, &rhs.span);
        Ok(Expr {
            kind: ExprKind::Binary {
                op,
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
            },
            span,
        })
    }

    fn parse_bit_or(&mut self) -> ParseResult<Expr> {
        self.parse_left_assoc(Self::parse_bit_xor, &[(TokenKind::Pipe, BinaryOp::BitOr)])
    }

    fn parse_bit_xor(&mut self) -> ParseResult<Expr> {
        self.parse_left_assoc(Self::parse_bit_and, &[(TokenKind::Caret, BinaryOp::BitXor)])
    }

    fn parse_bit_and(&mut self) -> ParseResult<Expr> {
        self.parse_left_assoc(Self::parse_shift, &[(TokenKind::Amp, BinaryOp::BitAnd)])
    }

    fn parse_shift(&mut self) -> ParseResult<Expr> {
        self.parse_left_assoc(
            Self::parse_range,
            &[
                (TokenKind::Shl, BinaryOp::Shl),
                (TokenKind::Shr, BinaryOp::Shr),
            ],
        )
    }

    fn parse_range(&mut self) -> ParseResult<Expr> {
        let lhs = self.parse_additive()?;
        self.skip_newlines_at_continuation();
        let inclusive = match self.peek_kind() {
            TokenKind::DotDot => false,
            TokenKind::DotDotEq => true,
            _ => return Ok(lhs),
        };
        self.advance();
        self.skip_newlines();
        let rhs = self.parse_additive()?;
        let span = merge_spans(&lhs.span, &rhs.span);
        Ok(Expr {
            kind: ExprKind::Range {
                start: Box::new(lhs),
                end: Box::new(rhs),
                inclusive,
            },
            span,
        })
    }

    fn parse_additive(&mut self) -> ParseResult<Expr> {
        self.parse_left_assoc(
            Self::parse_multiplicative,
            &[
                (TokenKind::Plus, BinaryOp::Add),
                (TokenKind::Minus, BinaryOp::Sub),
            ],
        )
    }

    fn parse_multiplicative(&mut self) -> ParseResult<Expr> {
        self.parse_left_assoc(
            Self::parse_unary,
            &[
                (TokenKind::Star, BinaryOp::Mul),
                (TokenKind::Slash, BinaryOp::Div),
                (TokenKind::Percent, BinaryOp::Mod),
            ],
        )
    }

    fn parse_left_assoc(
        &mut self,
        next: fn(&mut Parser) -> ParseResult<Expr>,
        ops: &[(TokenKind, BinaryOp)],
    ) -> ParseResult<Expr> {
        let mut lhs = next(self)?;
        loop {
            self.skip_newlines_at_continuation();
            let cur = self.peek_kind().clone();
            let matched = ops
                .iter()
                .find(|(tk, _)| std::mem::discriminant(tk) == std::mem::discriminant(&cur))
                .map(|(_, op)| *op);
            let Some(op) = matched else { break };
            self.advance();
            self.skip_newlines();
            let rhs = next(self)?;
            let span = merge_spans(&lhs.span, &rhs.span);
            lhs = Expr {
                kind: ExprKind::Binary {
                    op,
                    lhs: Box::new(lhs),
                    rhs: Box::new(rhs),
                },
                span,
            };
        }
        Ok(lhs)
    }

    fn parse_unary(&mut self) -> ParseResult<Expr> {
        let start = self.peek().span.clone();
        let op = match self.peek_kind() {
            TokenKind::Minus => Some(UnaryOp::Neg),
            TokenKind::Bang => Some(UnaryOp::Not),
            TokenKind::Amp => Some(UnaryOp::Ref),
            _ => None,
        };
        if let Some(op) = op {
            self.advance();
            let operand = self.parse_unary()?;
            let span = merge_spans(&start, &operand.span);
            return Ok(Expr {
                kind: ExprKind::Unary {
                    op,
                    operand: Box::new(operand),
                },
                span,
            });
        }
        self.parse_postfix()
    }

    fn parse_postfix(&mut self) -> ParseResult<Expr> {
        let mut expr = self.parse_primary()?;
        loop {
            match self.peek_kind() {
                TokenKind::Dot => {
                    self.advance();
                    self.skip_newlines();
                    let (name, name_span) = self.expect_ident("field or method name")?;
                    // Optional explicit generics: `.name<T>`.
                    let mut generics = Vec::new();
                    if matches!(self.peek_kind(), TokenKind::Lt) {
                        if let Some(args) = self.try_parse_type_args_for_call() {
                            generics = args;
                        }
                    }
                    // Call form: `.name(args)`.
                    if matches!(self.peek_kind(), TokenKind::LParen) {
                        self.advance();
                        let (args, end_span) = self.parse_arg_list()?;
                        let span = merge_spans(&expr.span, &end_span);
                        expr = Expr {
                            kind: ExprKind::MethodCall {
                                receiver: Box::new(expr),
                                name,
                                generics,
                                args,
                            },
                            span,
                        };
                    } else {
                        let span = merge_spans(&expr.span, &name_span);
                        expr = Expr {
                            kind: ExprKind::Field {
                                receiver: Box::new(expr),
                                name,
                            },
                            span,
                        };
                    }
                }
                TokenKind::LParen => {
                    self.advance();
                    let (args, end_span) = self.parse_arg_list()?;
                    let span = merge_spans(&expr.span, &end_span);
                    expr = Expr {
                        kind: ExprKind::Call {
                            callee: Box::new(expr),
                            args,
                        },
                        span,
                    };
                }
                TokenKind::LBracket => {
                    self.advance();
                    self.skip_newlines();
                    let index = self.parse_expr()?;
                    self.skip_newlines();
                    let rb = self.expect(&TokenKind::RBracket, "`]`")?;
                    let span = merge_spans(&expr.span, &rb.span);
                    expr = Expr {
                        kind: ExprKind::Index {
                            receiver: Box::new(expr),
                            index: Box::new(index),
                        },
                        span,
                    };
                }
                TokenKind::Question => {
                    let q = self.advance();
                    let span = merge_spans(&expr.span, &q.span);
                    expr = Expr {
                        kind: ExprKind::Try(Box::new(expr)),
                        span,
                    };
                }
                _ => break,
            }
        }
        Ok(expr)
    }

    /// Parse the contents of an argument list (after `(`) and consume
    /// the closing `)`. Returns the args and the span of the closer.
    fn parse_arg_list(&mut self) -> ParseResult<(Vec<Expr>, Span)> {
        // Inside a call's parentheses a struct literal is unambiguous: the `)`
        // closes the argument list, so there is no `if cond {` ambiguity. Lift
        // the no-struct-literal restriction an enclosing if/while/for/match head
        // imposes for the duration of the arguments, then restore it.
        let saved = self.no_struct_literal;
        self.no_struct_literal = false;
        let result = self.parse_arg_list_body();
        self.no_struct_literal = saved;
        result
    }

    fn parse_arg_list_body(&mut self) -> ParseResult<(Vec<Expr>, Span)> {
        let mut args = Vec::new();
        self.skip_newlines();
        if !matches!(self.peek_kind(), TokenKind::RParen) {
            loop {
                self.skip_newlines();
                args.push(self.parse_expr()?);
                self.skip_newlines();
                if !self.eat(&TokenKind::Comma) {
                    break;
                }
                self.skip_newlines();
                if matches!(self.peek_kind(), TokenKind::RParen) {
                    break;
                }
            }
        }
        let rparen = self.expect(&TokenKind::RParen, "`)`")?;
        Ok((args, rparen.span))
    }

    fn parse_primary(&mut self) -> ParseResult<Expr> {
        let tok = self.peek().clone();
        match tok.kind.clone() {
            TokenKind::IntLit(n) => {
                self.advance();
                Ok(Expr {
                    kind: ExprKind::Int(n),
                    span: tok.span,
                })
            }
            TokenKind::FloatLit(v) => {
                self.advance();
                Ok(Expr {
                    kind: ExprKind::Float(v),
                    span: tok.span,
                })
            }
            TokenKind::True => {
                self.advance();
                Ok(Expr {
                    kind: ExprKind::Bool(true),
                    span: tok.span,
                })
            }
            TokenKind::False => {
                self.advance();
                Ok(Expr {
                    kind: ExprKind::Bool(false),
                    span: tok.span,
                })
            }
            TokenKind::StringLit(s) => {
                self.advance();
                self.string_literal_expr(s, tok.span)
            }
            TokenKind::BlockStringLit(s) => {
                self.advance();
                Ok(Expr {
                    kind: ExprKind::BlockStr(s),
                    span: tok.span,
                })
            }
            TokenKind::CharLit(c) => {
                self.advance();
                Ok(Expr {
                    kind: ExprKind::Char(c),
                    span: tok.span,
                })
            }
            TokenKind::CStringLit(s) => {
                self.advance();
                Ok(Expr {
                    kind: ExprKind::CStr(s),
                    span: tok.span,
                })
            }
            TokenKind::SelfLower => {
                self.advance();
                Ok(Expr {
                    kind: ExprKind::SelfLower,
                    span: tok.span,
                })
            }
            TokenKind::SelfUpper => {
                self.advance();
                Ok(Expr {
                    kind: ExprKind::SelfUpper,
                    span: tok.span,
                })
            }
            TokenKind::LParen => self.parse_paren_or_tuple(),
            TokenKind::LBracket => self.parse_array_lit(),
            TokenKind::LBrace => self.parse_brace_primary(),
            TokenKind::If => self.parse_if(),
            TokenKind::Match => self.parse_match(),
            TokenKind::Loop => self.parse_loop(),
            TokenKind::While => self.parse_while(),
            TokenKind::For => self.parse_for(),
            TokenKind::Fun => self.parse_lambda_fun(),
            TokenKind::Identifier(_) => self.parse_ident_primary(),
            _ => Err(self.unexpected("expression")),
        }
    }

    /// Build the expression for a `"..."` string literal token. The
    /// lexer has already decoded escapes and kept any real `${...}`
    /// interpolation verbatim, marking each escaped `\$` with the
    /// `ESCAPED_DOLLAR_SENTINEL`. This splits the decoded text into
    /// fragments. A literal with no real `${...}` becomes a plain
    /// `ExprKind::Str` (with any escaped dollars un-escaped). One or more
    /// real interpolations produce an `ExprKind::InterpolatedString`.
    fn string_literal_expr(&self, decoded: String, span: Span) -> ParseResult<Expr> {
        let fragments = split_interpolation(&decoded, &span, &self.macros)?;
        // Collapse to a plain string when no embedded expression survived.
        if fragments
            .iter()
            .all(|f| matches!(f, StrFragment::Literal(_)))
        {
            let mut buf = String::new();
            for f in &fragments {
                if let StrFragment::Literal(s) = f {
                    buf.push_str(s);
                }
            }
            return Ok(Expr {
                kind: ExprKind::Str(buf),
                span,
            });
        }
        Ok(Expr {
            kind: ExprKind::InterpolatedString(fragments),
            span,
        })
    }

    fn parse_paren_or_tuple(&mut self) -> ParseResult<Expr> {
        let lparen = self.advance();
        self.skip_newlines();
        // `()` is a unit value: we represent it as an empty tuple but
        // reject it as UnsupportedTuple for now. Actually `()` does not
        // appear in the spec as a value form, so reject.
        if matches!(self.peek_kind(), TokenKind::RParen) {
            return Err(RavenError::parse(ParseError::UnsupportedTuple, lparen.span));
        }
        let first = self.parse_expr()?;
        self.skip_newlines();
        if matches!(self.peek_kind(), TokenKind::RParen) {
            let rp = self.advance();
            let span = merge_spans(&lparen.span, &rp.span);
            return Ok(Expr {
                kind: ExprKind::Paren(Box::new(first)),
                span,
            });
        }
        // Tuple: at least one comma after `first`. Parse the rest of
        // the elements to give a useful span, then report
        // UnsupportedTuple.
        let _ = first;
        while self.eat(&TokenKind::Comma) {
            self.skip_newlines();
            if matches!(self.peek_kind(), TokenKind::RParen) {
                break;
            }
            self.parse_expr()?;
            self.skip_newlines();
        }
        let rp = self.expect(&TokenKind::RParen, "`)`")?;
        let span = merge_spans(&lparen.span, &rp.span);
        Err(RavenError::parse(ParseError::UnsupportedTuple, span))
    }

    /// Parse a `[...]` bracket primary: a list literal `[a, b]`, an empty
    /// list `[]`, an empty map `[:]`, or a map literal `[k: v, ...]`. A
    /// map is distinguished from a list by a `:` at the top level of the
    /// first element; the empty map uses the explicit `[:]` form so the
    /// bare `[]` stays an empty list.
    fn parse_array_lit(&mut self) -> ParseResult<Expr> {
        let lb = self.advance();
        self.skip_newlines();
        // Empty map: `[:]`.
        if matches!(self.peek_kind(), TokenKind::Colon)
            && matches!(self.peek_kind_at(1), TokenKind::RBracket)
        {
            self.advance(); // :
            let rb = self.advance(); // ]
            let span = merge_spans(&lb.span, &rb.span);
            return Ok(Expr {
                kind: ExprKind::MapLit(Vec::new()),
                span,
            });
        }
        // Empty list: `[]`.
        if matches!(self.peek_kind(), TokenKind::RBracket) {
            let rb = self.advance();
            let span = merge_spans(&lb.span, &rb.span);
            return Ok(Expr {
                kind: ExprKind::Array(Vec::new()),
                span,
            });
        }
        // Parse the first element expression, then decide list vs map by
        // whether a `:` follows it at the top level.
        let first = self.parse_expr()?;
        self.skip_newlines();
        if matches!(self.peek_kind(), TokenKind::Colon) {
            return self.parse_map_lit(lb.span, first);
        }
        let mut items = vec![first];
        self.skip_newlines();
        if self.eat(&TokenKind::Comma) {
            loop {
                self.skip_newlines();
                if matches!(self.peek_kind(), TokenKind::RBracket) {
                    break;
                }
                items.push(self.parse_expr()?);
                self.skip_newlines();
                if !self.eat(&TokenKind::Comma) {
                    break;
                }
            }
        }
        let rb = self.expect(&TokenKind::RBracket, "`]`")?;
        let span = merge_spans(&lb.span, &rb.span);
        Ok(Expr {
            kind: ExprKind::Array(items),
            span,
        })
    }

    /// Parse the remainder of a map literal after the first key has been
    /// read and the following `:` is the next token. `first_key` is that
    /// key. Produces an `ExprKind::MapLit` of `(key, value)` pairs; the
    /// HIR lowers it to `Map.new()` plus one `set(k, v)` per pair.
    fn parse_map_lit(&mut self, lbracket: Span, first_key: Expr) -> ParseResult<Expr> {
        let mut pairs: Vec<(Expr, Expr)> = Vec::new();
        self.expect(&TokenKind::Colon, "`:`")?;
        self.skip_newlines();
        let first_val = self.parse_expr()?;
        pairs.push((first_key, first_val));
        self.skip_newlines();
        while self.eat(&TokenKind::Comma) {
            self.skip_newlines();
            if matches!(self.peek_kind(), TokenKind::RBracket) {
                break;
            }
            let key = self.parse_expr()?;
            self.skip_newlines();
            self.expect(&TokenKind::Colon, "`:`")?;
            self.skip_newlines();
            let val = self.parse_expr()?;
            pairs.push((key, val));
            self.skip_newlines();
        }
        let rb = self.expect(&TokenKind::RBracket, "`]`")?;
        let span = merge_spans(&lbracket, &rb.span);
        Ok(Expr {
            kind: ExprKind::MapLit(pairs),
            span,
        })
    }

    /// Parse a `{...}` primary: either a shorthand lambda or a block
    /// expression. The distinguisher is an `Arrow` token at depth 0
    /// before any statement separator outside parens or brackets.
    fn parse_brace_primary(&mut self) -> ParseResult<Expr> {
        if self.is_shorthand_lambda() {
            return self.parse_lambda_shorthand();
        }
        if self.is_set_literal() {
            return self.parse_set_lit();
        }
        let block = self.parse_block()?;
        let span = block.span.clone();
        Ok(Expr {
            kind: ExprKind::Block(block),
            span,
        })
    }

    /// Heuristic for a set literal `{ e1, e2, ... }`. The cursor is at the
    /// opening `{`. A set is a brace whose first element is an expression
    /// followed, at brace depth 1, by a `,` before any statement separator
    /// (`;` or newline) or the closing `}`. A single-element `{ x }` is a
    /// block (it preserves the existing one-tail-expression behavior), so a
    /// set always carries at least one comma. An empty `{}` is a block, and
    /// an empty set is written `Set.new()`.
    fn is_set_literal(&self) -> bool {
        let mut depth_paren = 0i32;
        let mut depth_bracket = 0i32;
        let mut depth_brace = 0i32;
        let mut i = self.pos;
        let mut seen_token = false;
        while i < self.tokens.len() {
            let k = &self.tokens[i].kind;
            match k {
                TokenKind::LBrace => depth_brace += 1,
                TokenKind::RBrace => {
                    depth_brace -= 1;
                    if depth_brace == 0 {
                        return false;
                    }
                }
                TokenKind::LParen => depth_paren += 1,
                TokenKind::RParen => depth_paren -= 1,
                TokenKind::LBracket => depth_bracket += 1,
                TokenKind::RBracket => depth_bracket -= 1,
                TokenKind::Comma if depth_brace == 1 && depth_paren == 0 && depth_bracket == 0 => {
                    return seen_token;
                }
                // A statement keyword right after `{` is always a block.
                TokenKind::Let | TokenKind::Return | TokenKind::Break | TokenKind::Continue
                    if depth_brace == 1 && !seen_token =>
                {
                    return false;
                }
                TokenKind::Semi | TokenKind::Newline
                    if depth_brace == 1 && depth_paren == 0 && depth_bracket == 0 =>
                {
                    return false;
                }
                TokenKind::Eof => return false,
                _ => {
                    if depth_brace == 1 {
                        seen_token = true;
                    }
                }
            }
            i += 1;
        }
        false
    }

    /// Parse a set literal `{ e1, e2, ... }`. Produces an
    /// `ExprKind::SetLit`; the HIR lowers it to `Set.new()` plus one
    /// `add(e)` per element. The cursor is at the opening `{`.
    fn parse_set_lit(&mut self) -> ParseResult<Expr> {
        let lb = self.advance(); // {
        let mut items = Vec::new();
        self.skip_newlines();
        loop {
            self.skip_newlines();
            if matches!(self.peek_kind(), TokenKind::RBrace) {
                break;
            }
            items.push(self.parse_expr()?);
            self.skip_newlines();
            if !self.eat(&TokenKind::Comma) {
                break;
            }
        }
        let rb = self.expect(&TokenKind::RBrace, "`}`")?;
        let span = merge_spans(&lb.span, &rb.span);
        Ok(Expr {
            kind: ExprKind::SetLit(items),
            span,
        })
    }

    /// Heuristic: look forward from the `{` to find an `Arrow` at brace
    /// depth 0 before we leave the brace. If found, the brace is a
    /// shorthand lambda.
    fn is_shorthand_lambda(&self) -> bool {
        // Cursor is at `{`. Scan forward.
        let mut depth_paren = 0i32;
        let mut depth_bracket = 0i32;
        let mut depth_brace = 0i32;
        let mut i = self.pos;
        while i < self.tokens.len() {
            let k = &self.tokens[i].kind;
            match k {
                TokenKind::LBrace => depth_brace += 1,
                TokenKind::RBrace => {
                    depth_brace -= 1;
                    if depth_brace == 0 {
                        return false;
                    }
                }
                TokenKind::LParen => depth_paren += 1,
                TokenKind::RParen => depth_paren -= 1,
                TokenKind::LBracket => depth_bracket += 1,
                TokenKind::RBracket => depth_bracket -= 1,
                TokenKind::Arrow if depth_brace == 1 && depth_paren == 0 && depth_bracket == 0 => {
                    return true;
                }
                TokenKind::Newline | TokenKind::Semi
                    if depth_brace == 1 && depth_paren == 0 && depth_bracket == 0 =>
                {
                    return false;
                }
                TokenKind::Eof => return false,
                _ => {}
            }
            i += 1;
        }
        false
    }
